update build version
Signed-off-by: acuicultor <ramoncuenca4@gmail.com>

--- a/updater/changelog.txt
+++ b/updater/changelog.txt
@@ -1,9 +1,104 @@
-Project name: RadioactiveKernel_Raviole-v1.0.6 
-  * defconfig regenerate (acuicultor) [62be0e58ae68]
-  * Add support for FKM OTA kernel updates (acuicultor)
-  * net: ipv4: Set tcp_mtu_probing to 1 and make it 444 (celtare21) [a8cd0a53cde9]
-  * net: core: Increase netdev budget and max_backlog (Raphiel Rollerscaperers) [e2ac7df4bcc0]
-  * qos: Don't allow userspace to impose restrictions on CPU idle levels (Sultan Alsawaf) [419a0712aafb]
-  * mm: Disable watermark boosting by default (Sultan Alsawaf) [368c00948b2f]
-  * update .gitignore (acuicultor) [1559fc0770a5]
-  * merge February source (acuicultor)
+Project name: RadioactiveKernel_Raviole-v1.1.0
+  * update build version (acuicultor) [529ec3d4092e]
+  * lib/iov_iter: initialize "flags" in new pipe_buffer (Max Kellermann) [310bb741db51]
+  * sched/fair: Compile out NUMA code entirely when NUMA is disabled (Sultan Alsawaf) [e7838111b71d]
+  * kgsl: Increase priority of RT thread We need kgsl_worker_thread to preempt all userspace surfaceflinger threads to avoid a possible deadlock. (Alex Naidis) [01bee3fd1e84]
+  * PM: devfreq: Use high priority workqueue (myfluxi) [d8a246ac3d6f]
+  * mm: Disable watermark boosting by default (Sultan Alsawaf) [86aae91fab69]
+  * clang: update to latest google prebuilt version (acuicultor) [e1a18c6229be]
+  * gki: update abi (acuicultor) [68337c704709]
+  * drivers: misc: power: implement usb fast charge mode (engstk) [9aac30797008]
+  * gki: update abi (acuicultor) [923c48b87484]
+  * drivers: input: adress clang 14.0.2 warnings (acuicultor) [0cd5c3cfe6c9]
+  * clang: update to latest google prebuilt version (acuicultor) [7e0a13a3689f]
+  * defconfig regenerate (acuicultor) [66b55ea56798]
+  * Add support for FKM OTA kernel updates Thanks to @ franciscofranco (acuicultor) [848b127ea49f]
+  * qos: Don't allow userspace to impose restrictions on CPU idle levels (Sultan Alsawaf) [e8de66f6d0fa]
+  * defconfig regenerate (acuicultor) [44e7ae1772d7]
+  * android: abi: remove unused symbols from lists (freak07) [e934217911c6]
+  * android: abi: remove unused symbol (freak07) [7cc2e98f53c9]
+  * clang: bump clang to latest google prebuilt (freak07) [e64be019d071]
+  * GKI: cal-if: Fix reading from SRAM page fault (Will McVicker) [ef9b81f1170e]
+  * BACKPORT: kbuild: Fix TRIM_UNUSED_KSYMS with LTO_CLANG (Sami Tolvanen) [93d87e8b344a]
+  * mm: Lower the non-hugetlbpage pageblock size to reduce scheduling delays (Sultan Alsawaf) [6ede9b1a5294]
+  * defconfig regenerate (acuicultor) [7678548d0de0]
+  * buld.config: don't build eng and userdebug dtbo (acuicultor) [0bd7a9db6701]
+  * binder: Stub out debug prints by default (Sultan Alsawaf) [a2737b617aaf]
+  * build.config: Disable CMA migration failure debugging (celtare21) [4fcbb7b1904f]
+  * arm64: dts: Don't build userdebug or eng (celtare21) [7ca0dfd8e24c]
+  * sched/rt: Change default SCHED_RR timeslice from 100 ms to 1 jiffy (Sultan Alsawaf) [b4ff630a59d8]
+  * dma-buf/sync_file: Remove debug names from sync data structures (Sultan Alsawaf) [69e02c13421b]
+  * locking/rwsem: Don't hog RCU read lock while optimistically spinning (Sultan Alsawaf) [5a247a847779]
+  * locking/mutex: Don't hog RCU read lock while optimistically spinning (Sultan Alsawaf) [ccc9f6008a39]
+  * drivers: nfc: Lower wakelock timeout (celtare21) [52d3e3d78145]
+  * mm: oom_kill: Reduce some verbose logging (Diab Neiroukh) [dd181bb85e5d]
+  * sched: core: silence no longer affine to cpu logspam (Yaroslav Furman) [bcea097bc5fb]
+  * cpu: Silence log spam when a CPU is brought up (Sultan Alsawaf) [5be8155cf45d]
+  * staging: binder - Set binder_debug_mask=0 to suppress logging (John Dias) [cb2af174a908]
+  * pwm: treat double free as a debug message (Park Ju Hyung) [959ba58c4eb8]
+  * f2fs: reduce timeout for uncongestion (Park Ju Hyung) [0345a097d107]
+  * f2fs: set ioprio of GC kthread to idle (Park Ju Hyung) [1f6bca4b9d74]
+  * dtc: quiet (tbalden) [a57eb3865d39]
+  * defconfig regenerate (acuicultor) [49e537c061cf]
+  * POWERSUSPEND: SQUASH - updated to Powersuspend v2.0 (ThunderStorms21th) [22c595add2e7]
+  * kernel/power: POWERSUSPEND v1.8 - squash  kernel/power/powersuspend: new PM kernel driver for Android w/o early… (ThunderStorms21th) [5f83c27acb44]
+  * defconfig: adjust cmdline for faster boot (engstk) [952369afaa3b]
+  * fs: sync: Avoid calling fdget without fdput When adding fsync support, we check for fsync_enabled() in several cases but it appears that we should fdput() after fdget() but the current code just check for fsync_enabled and directly return in some cases after calling fdget(). (Wang Han) [c55522056820]
+  * fs: fsync on/off support (franciscofranco) [9bdcc9244ba4]
+  * proc: Don't let Google Camera run in the background (Sultan Alsawaf) [1cdb926649a1]
+  * treewide: use power efficient workingqueues (freak07) [162a277fc6a1]
+  * mm: vmstat: use power efficient workingqueues (freak07) [065910373486]
+  * scripts: fix the crappy URLs in newest Google Clang versions and kernel version name and compile date/time (acuicultor) [cee15df8639e]
+  * Revert "kbuild: use CONFIG_CC_VERSION_TEXT to construct LINUX_COMPILER macro" (acuicultor) [1654222105eb]
+  * defconfig regenerate (acuicultor) [90a0455a7583]
+  * pci: bye log spam (Francisco Franco) [e633e9204562]
+  * PM/Sleep: Start killing wakelocks after two minutes of idle (120s) (Tyler Nijmeh) [41e6ab69eb23]
+  * Optimized Integer SQRT. for upto 3x faster operation (engstk) [b91e31aef7f4]
+  * defconfig regenerate (acuicultor) [d026ce16a50a]
+  * mbcache: Speed up cache entry creation (Sultan Alsawaf) [05affa1f84a4]
+  * fs: default to noatime (arter97) [78e8ec9b8f0f]
+  * sock: inline SELinux's sk_security to struct sock (Park Ju Hyung) [204297fa1397]
+  * trace: Add a CONFIG_DISABLE_TRACE_PRINTK option. (Park Ju Hyung) [71614c51d27a]
+  * net/sched: Shut up (celtare21) [02f1c4003a54]
+  * mm: slub: Default slub_max_order to 0 (Mel Gorman) [0ab8df98b7d2]
+  * binfmt_elf.c: use get_random_int() to fix entropy depleting (Jeff Liu) [824376e02a31]
+  * boeffla_wl_blocker: Increase blacklist max length (Aner Torre) [c5f5c24e5655]
+  * power: wl_blocker: use strcpy() in init (Denis Efremov) [3881139782ec]
+  * power: wl_blocker: remove excessive len variable (Denis Efremov) [6e424a37d75c]
+  * power: wl_blocker: use simple_strtoul() in debug_show() (Denis Efremov) [11d91f8239b2]
+  * power: wl_blocker: use signed type for ret in debug_store() (Denis Efremov) [dd668ad609af]
+  * power: wl_blocker: fix permissions for version_show (Denis Efremov) [a1f34de32d1b]
+  * power: wl_blocker: use scnprintf PAGE_SIZE (Denis Efremov) [a7e69820fdef]
+  * power: wl_blocker: add generic size (Denis Efremov) [ef273efa73ab]
+  * boeffla_wl_blocker: don't block any wakelock by default (acuicultor) [a2c0c27afac0]
+  * boeffla_wl_blocker: update to wakelock blocker driver v1.1.0 (andip71) [7338de30cdb7]
+  * boeffla_wl_blocker: update to wakelock blocker driver v1.0.1 (andip71) [314d0e1b3362]
+  * boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0 (andip71) [e095b7aa4f31]
+  * defconfig regenerate (acuicultor) [26ce9f8b21e8]
+  * ANDROID: GKI: enable RCU_BOOST (Tim Murray) [a58f9d686f39]
+  * gki_defconfig: enable lrng (freak07) [bb48f4985338]
+  * FROMGIT: rcu: Allow expedited RCU grace periods on incoming CPUs (Paul E. McKenney) [1a1c6032eba7]
+  * FROMLIST: rcu: Don't deboost before reporting expedited quiescent state (Paul E. McKenney) [813c140926d1]
+  * lrng: merge v43 (Juhyung Park) [b7eb6480a04e]
+  * drivers: lrng: fix compilation for raviole 5.10 (freak07) [f034cc665633]
+  * LRNG - add power-on and runtime self-tests (Stephan Mueller) [d8524cba3c26]
+  * LRNG - add interface for gathering of raw entropy (Stephan Mueller) [318d9aa87204]
+  * LRNG - add SP800-90B compliant health tests (Stephan Mueller) [566458a71d82]
+  * LRNG - add Jitter RNG fast noise source (Stephan Mueller) [e4ed292a215e]
+  * crypto: move Jitter RNG header include dir (Stephan Mueller) [7f222fb8315e]
+  * LRNG - add kernel crypto API PRNG extension (Stephan Mueller) [de2fb9621d76]
+  * LRNG - add SP800-90A DRBG extension (Stephan Mueller) [d124fecde674]
+  * crypto: DRBG - externalize DRBG functions for LRNG (Stephan Mueller) [75e6ad88dd69]
+  * LRNG - add common generic hash support (Stephan Mueller) [ea9016901a55]
+  * LRNG - add switchable DRNG support (Stephan Mueller) [ec590a00b593]
+  * LRNG - sysctls and /proc interface (Stephan Mueller) [e94bb7dd6fc0]
+  * LRNG - allocate one DRNG instance per NUMA node (Stephan Mueller) [ac7d970a0cc8]
+  * Linux Random Number Generator (Stephan Mueller) [b42bb738b050]
+  * gki_defconfig: enable advanced tcp, support ttl spoofing (freak07) [74480ee8681a]
+  * gki_defconfig: enable dynamic debug (freak07) [b982b3a669fe]
+  * buildscript: gs101: adjust vendor_boot ramdisk and cmdline to reflect stock (freak07) [bd26db7ed726]
+  * kernel: Use the stock config for /proc/config.gz (Sultan Alsawaf) [58b37e596e2d]
+  * buildscript: build kernel, do not use prebuilts (freak07) [2bb933938223]
+  * update ignore (acuicultor) [e0448f0e1846]
+  * merge MARCH 2022 12L source
+
