--- a/updater/changelog.txt
+++ b/updater/changelog.txt
@@ -1,104 +1,134 @@
-Project name: RadioactiveKernel_Raviole-v1.1.0
-  * update build version (acuicultor) [529ec3d4092e]
-  * lib/iov_iter: initialize "flags" in new pipe_buffer (Max Kellermann) [310bb741db51]
-  * sched/fair: Compile out NUMA code entirely when NUMA is disabled (Sultan Alsawaf) [e7838111b71d]
-  * kgsl: Increase priority of RT thread We need kgsl_worker_thread to preempt all userspace surfaceflinger threads to avoid a possible deadlock. (Alex Naidis) [01bee3fd1e84]
-  * PM: devfreq: Use high priority workqueue (myfluxi) [d8a246ac3d6f]
-  * mm: Disable watermark boosting by default (Sultan Alsawaf) [86aae91fab69]
-  * clang: update to latest google prebuilt version (acuicultor) [e1a18c6229be]
-  * gki: update abi (acuicultor) [68337c704709]
-  * drivers: misc: power: implement usb fast charge mode (engstk) [9aac30797008]
-  * gki: update abi (acuicultor) [923c48b87484]
-  * drivers: input: adress clang 14.0.2 warnings (acuicultor) [0cd5c3cfe6c9]
-  * clang: update to latest google prebuilt version (acuicultor) [7e0a13a3689f]
-  * defconfig regenerate (acuicultor) [66b55ea56798]
-  * Add support for FKM OTA kernel updates Thanks to @ franciscofranco (acuicultor) [848b127ea49f]
-  * qos: Don't allow userspace to impose restrictions on CPU idle levels (Sultan Alsawaf) [e8de66f6d0fa]
-  * defconfig regenerate (acuicultor) [44e7ae1772d7]
-  * android: abi: remove unused symbols from lists (freak07) [e934217911c6]
-  * android: abi: remove unused symbol (freak07) [7cc2e98f53c9]
-  * clang: bump clang to latest google prebuilt (freak07) [e64be019d071]
-  * GKI: cal-if: Fix reading from SRAM page fault (Will McVicker) [ef9b81f1170e]
-  * BACKPORT: kbuild: Fix TRIM_UNUSED_KSYMS with LTO_CLANG (Sami Tolvanen) [93d87e8b344a]
-  * mm: Lower the non-hugetlbpage pageblock size to reduce scheduling delays (Sultan Alsawaf) [6ede9b1a5294]
-  * defconfig regenerate (acuicultor) [7678548d0de0]
-  * buld.config: don't build eng and userdebug dtbo (acuicultor) [0bd7a9db6701]
-  * binder: Stub out debug prints by default (Sultan Alsawaf) [a2737b617aaf]
-  * build.config: Disable CMA migration failure debugging (celtare21) [4fcbb7b1904f]
-  * arm64: dts: Don't build userdebug or eng (celtare21) [7ca0dfd8e24c]
-  * sched/rt: Change default SCHED_RR timeslice from 100 ms to 1 jiffy (Sultan Alsawaf) [b4ff630a59d8]
-  * dma-buf/sync_file: Remove debug names from sync data structures (Sultan Alsawaf) [69e02c13421b]
-  * locking/rwsem: Don't hog RCU read lock while optimistically spinning (Sultan Alsawaf) [5a247a847779]
-  * locking/mutex: Don't hog RCU read lock while optimistically spinning (Sultan Alsawaf) [ccc9f6008a39]
-  * drivers: nfc: Lower wakelock timeout (celtare21) [52d3e3d78145]
-  * mm: oom_kill: Reduce some verbose logging (Diab Neiroukh) [dd181bb85e5d]
-  * sched: core: silence no longer affine to cpu logspam (Yaroslav Furman) [bcea097bc5fb]
-  * cpu: Silence log spam when a CPU is brought up (Sultan Alsawaf) [5be8155cf45d]
-  * staging: binder - Set binder_debug_mask=0 to suppress logging (John Dias) [cb2af174a908]
-  * pwm: treat double free as a debug message (Park Ju Hyung) [959ba58c4eb8]
-  * f2fs: reduce timeout for uncongestion (Park Ju Hyung) [0345a097d107]
-  * f2fs: set ioprio of GC kthread to idle (Park Ju Hyung) [1f6bca4b9d74]
-  * dtc: quiet (tbalden) [a57eb3865d39]
-  * defconfig regenerate (acuicultor) [49e537c061cf]
-  * POWERSUSPEND: SQUASH - updated to Powersuspend v2.0 (ThunderStorms21th) [22c595add2e7]
-  * kernel/power: POWERSUSPEND v1.8 - squash  kernel/power/powersuspend: new PM kernel driver for Android w/o early… (ThunderStorms21th) [5f83c27acb44]
-  * defconfig: adjust cmdline for faster boot (engstk) [952369afaa3b]
-  * fs: sync: Avoid calling fdget without fdput When adding fsync support, we check for fsync_enabled() in several cases but it appears that we should fdput() after fdget() but the current code just check for fsync_enabled and directly return in some cases after calling fdget(). (Wang Han) [c55522056820]
-  * fs: fsync on/off support (franciscofranco) [9bdcc9244ba4]
-  * proc: Don't let Google Camera run in the background (Sultan Alsawaf) [1cdb926649a1]
-  * treewide: use power efficient workingqueues (freak07) [162a277fc6a1]
-  * mm: vmstat: use power efficient workingqueues (freak07) [065910373486]
-  * scripts: fix the crappy URLs in newest Google Clang versions and kernel version name and compile date/time (acuicultor) [cee15df8639e]
-  * Revert "kbuild: use CONFIG_CC_VERSION_TEXT to construct LINUX_COMPILER macro" (acuicultor) [1654222105eb]
-  * defconfig regenerate (acuicultor) [90a0455a7583]
-  * pci: bye log spam (Francisco Franco) [e633e9204562]
-  * PM/Sleep: Start killing wakelocks after two minutes of idle (120s) (Tyler Nijmeh) [41e6ab69eb23]
-  * Optimized Integer SQRT. for upto 3x faster operation (engstk) [b91e31aef7f4]
-  * defconfig regenerate (acuicultor) [d026ce16a50a]
-  * mbcache: Speed up cache entry creation (Sultan Alsawaf) [05affa1f84a4]
-  * fs: default to noatime (arter97) [78e8ec9b8f0f]
-  * sock: inline SELinux's sk_security to struct sock (Park Ju Hyung) [204297fa1397]
-  * trace: Add a CONFIG_DISABLE_TRACE_PRINTK option. (Park Ju Hyung) [71614c51d27a]
-  * net/sched: Shut up (celtare21) [02f1c4003a54]
-  * mm: slub: Default slub_max_order to 0 (Mel Gorman) [0ab8df98b7d2]
-  * binfmt_elf.c: use get_random_int() to fix entropy depleting (Jeff Liu) [824376e02a31]
-  * boeffla_wl_blocker: Increase blacklist max length (Aner Torre) [c5f5c24e5655]
-  * power: wl_blocker: use strcpy() in init (Denis Efremov) [3881139782ec]
-  * power: wl_blocker: remove excessive len variable (Denis Efremov) [6e424a37d75c]
-  * power: wl_blocker: use simple_strtoul() in debug_show() (Denis Efremov) [11d91f8239b2]
-  * power: wl_blocker: use signed type for ret in debug_store() (Denis Efremov) [dd668ad609af]
-  * power: wl_blocker: fix permissions for version_show (Denis Efremov) [a1f34de32d1b]
-  * power: wl_blocker: use scnprintf PAGE_SIZE (Denis Efremov) [a7e69820fdef]
-  * power: wl_blocker: add generic size (Denis Efremov) [ef273efa73ab]
-  * boeffla_wl_blocker: don't block any wakelock by default (acuicultor) [a2c0c27afac0]
-  * boeffla_wl_blocker: update to wakelock blocker driver v1.1.0 (andip71) [7338de30cdb7]
-  * boeffla_wl_blocker: update to wakelock blocker driver v1.0.1 (andip71) [314d0e1b3362]
-  * boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0 (andip71) [e095b7aa4f31]
-  * defconfig regenerate (acuicultor) [26ce9f8b21e8]
-  * ANDROID: GKI: enable RCU_BOOST (Tim Murray) [a58f9d686f39]
-  * gki_defconfig: enable lrng (freak07) [bb48f4985338]
-  * FROMGIT: rcu: Allow expedited RCU grace periods on incoming CPUs (Paul E. McKenney) [1a1c6032eba7]
-  * FROMLIST: rcu: Don't deboost before reporting expedited quiescent state (Paul E. McKenney) [813c140926d1]
-  * lrng: merge v43 (Juhyung Park) [b7eb6480a04e]
-  * drivers: lrng: fix compilation for raviole 5.10 (freak07) [f034cc665633]
-  * LRNG - add power-on and runtime self-tests (Stephan Mueller) [d8524cba3c26]
-  * LRNG - add interface for gathering of raw entropy (Stephan Mueller) [318d9aa87204]
-  * LRNG - add SP800-90B compliant health tests (Stephan Mueller) [566458a71d82]
-  * LRNG - add Jitter RNG fast noise source (Stephan Mueller) [e4ed292a215e]
-  * crypto: move Jitter RNG header include dir (Stephan Mueller) [7f222fb8315e]
-  * LRNG - add kernel crypto API PRNG extension (Stephan Mueller) [de2fb9621d76]
-  * LRNG - add SP800-90A DRBG extension (Stephan Mueller) [d124fecde674]
-  * crypto: DRBG - externalize DRBG functions for LRNG (Stephan Mueller) [75e6ad88dd69]
-  * LRNG - add common generic hash support (Stephan Mueller) [ea9016901a55]
-  * LRNG - add switchable DRNG support (Stephan Mueller) [ec590a00b593]
-  * LRNG - sysctls and /proc interface (Stephan Mueller) [e94bb7dd6fc0]
-  * LRNG - allocate one DRNG instance per NUMA node (Stephan Mueller) [ac7d970a0cc8]
-  * Linux Random Number Generator (Stephan Mueller) [b42bb738b050]
-  * gki_defconfig: enable advanced tcp, support ttl spoofing (freak07) [74480ee8681a]
-  * gki_defconfig: enable dynamic debug (freak07) [b982b3a669fe]
-  * buildscript: gs101: adjust vendor_boot ramdisk and cmdline to reflect stock (freak07) [bd26db7ed726]
-  * kernel: Use the stock config for /proc/config.gz (Sultan Alsawaf) [58b37e596e2d]
-  * buildscript: build kernel, do not use prebuilts (freak07) [2bb933938223]
-  * update ignore (acuicultor) [e0448f0e1846]
-  * merge MARCH 2022 12L source
+Project name: RadioactiveKernel_Raviole-v1.1.5 
+  * update build version (acuicultor)
+  * gki: abi update (acuicultor) [40cef309f325]
+  * vendor_hook: sched: let root group task use max uclamp when booting (Chungkai Mei) [16f5ff05bf02]
+  * clang: update to latest google prebuilt version (acuicultor) [640e70ebbdf5]
+  * kernel: sched: account for upstream code (freak07) [9e76d9b3ef7a]
+  * [RFC][DO NOT MERGE] sched/uclamp: Filter out uclamp_{max, min} for small tasks (Qais Yousef) [948ef513a1dd]
+  * drivers: soc: google: vh: adjust for upstream (freak07) [b3d3a4a11cab]
+  * defconfig regenerate (acuicultor) [f17ee89f0786]
+  * ANDROID: Make MGLRU aware of speculative faults (Kalesh Singh) [c2677b2db9c3]
+  * keydebug: update to 5.10.80 get_idle_time (Anay Wadhera) [7d73e1c7260e]
+  * FROMLIST: mm: multi-gen LRU: design doc (Yu Zhao) [574973b9d085]
+  * FROMLIST: mm: multi-gen LRU: admin guide (Yu Zhao) [8c6fd5dc87b3]
+  * FROMLIST: mm: multi-gen LRU: debugfs interface (Yu Zhao) [ef17b6de8994]
+  * FROMLIST: mm: multi-gen LRU: thrashing prevention (Yu Zhao) [5ec30ff71678]
+  * FROMLIST: mm: multi-gen LRU: kill switch (Yu Zhao) [a0c8ea7e225d]
+  * FROMLIST: mm: multi-gen LRU: optimize multiple memcgs (Yu Zhao) [b290bebdd073]
+  * FROMLIST: mm: multi-gen LRU: support page table walks (Yu Zhao) [bfd736be30b7]
+  * FROMLIST: mm: multi-gen LRU: exploit locality in rmap (Yu Zhao) [64f094063638]
+  * FROMLIST: mm: multi-gen LRU: minimal implementation (Yu Zhao) [b3c5c29955d6]
+  * FROMLIST: mm: multi-gen LRU: groundwork (Yu Zhao) [767a3ad9cbb4]
+  * FROMLIST: mm/vmscan.c: refactor shrink_node() (Yu Zhao) [6ceef40a0a44]
+  * FROMLIST: mm: x86: add CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG (Yu Zhao) [eb8adf61a488]
+  * FROMLIST: mm: x86, arm64: add arch_has_hw_pte_young() (Yu Zhao) [2c1350ab77ea]
+  * UPSTREAM: include/linux/page-flags-layout.h: cleanups (Yu Zhao) [e5086ddd0c23]
+  * UPSTREAM: include/linux/page-flags-layout.h: correctly determine LAST_CPUPID_WIDTH (Yu Zhao) [ce50e22f71aa]
+  * UPSTREAM: mm/swap: don't SetPageWorkingset unconditionally during swapin (Yu Zhao) [ad393bd663f1]
+  * UPSTREAM: include/linux/mm_inline.h: fold page_lru_base_type() into its sole caller (Yu Zhao) [f658f66af491]
+  * BACKPORT: mm: VM_BUG_ON lru page flags (Yu Zhao) [7ba231bea0c7]
+  * BACKPORT: mm: add __clear_page_lru_flags() to replace page_off_lru() (Yu Zhao) [e02c60eb7c9f]
+  * BACKPORT: mm/swap.c: don't pass "enum lru_list" to del_page_from_lru_list() (Yu Zhao) [e5d12d75ab12]
+  * UPSTREAM: mm/swap.c: don't pass "enum lru_list" to trace_mm_lru_insertion() (Yu Zhao) [ce7ded5f4d8e]
+  * BACKPORT: mm: don't pass "enum lru_list" to lru list addition functions (Yu Zhao) [5c03e8ca06d0]
+  * BACKPORT: include/linux/mm_inline.h: shuffle lru list addition and deletion functions (Yu Zhao) [b843244dc245]
+  * UPSTREAM: mm: fix use-after-free when anon vma name is used after vma is freed (Suren Baghdasaryan) [153cf1460deb]
+  * UPSTREAM: mm: prevent vm_area_struct::anon_name refcount saturation (Suren Baghdasaryan) [0a6dac803f76]
+  * UPSTREAM: mm: refactor vm_area_struct::anon_vma_name usage code (Suren Baghdasaryan) [90abce7bc3a2]
+  * UPSTREAM: mm: add anonymous vma name refcounting (Suren Baghdasaryan) [81681cd6f61a]
+  * UPSTREAM: mm: move anon_vma declarations to linux/mm_inline.h (Arnd Bergmann) [8db08448b7bc]
+  * UPSTREAM: mm: add a field to store names for private anonymous memory (Colin Cross) [68c4b514926d]
+  * Revert "ANDROID: mm: fix up new call to vma_merge()" (Suren Baghdasaryan) [8d9f8d08e33e]
+  * UPSTREAM: mm: rearrange madvise code to allow for reuse (Colin Cross) [94a5624a6d56]
+  * Revert "ANDROID: mm: add a field to store names for private anonymous memory" (Suren Baghdasaryan) [53d2e2155efb]
+  * Revert "ANDROID: fix up 60500a42286d ("ANDROID: mm: add a field to store names for private anonymous memory")" (Suren Baghdasaryan) [468f06564208]
+  * BACKPORT: mm/vmscan.c: use add_page_to_lru_list() (Yu Zhao) [b2bd738403dc]
+  * proc: Don't let YouTube Player run in the background (acuicultor) [017b042a7d35]
+  * clang: update to latest google prebuilt version (acuicultor) [88d643703e2a]
+  * kernel: sched: satisfy clang (acuicultor) [e012af69e75d]
+  * uci: make cfg parse on init optional (tbalden) [90d87b47231b]
+  * uci: ntf: add camera on/off status query (tbalden) [85e5c0cb2359]
+  * s2s: raise min time for doubletaps, fix for unintended double taps (tbalden) [78b6bacef11e]
+  * s2s: update for p6/p6pro bugfixes (tbalden) [5d5d29af070a]
+  * uci: torch function: use uci function handlers for modules (tbalden) [7130cec87af3]
+  * s2s: add oriole setup parts (tbalden) [b139690a82c2]
+  * arch: setup: add raven hw model detection (tbalden) [8683052cdd77]
+  * gki: update abi (freak07) [c88e14bd4eb0]
+  * uci: disable kadaway and adjust for non userland tree (freak07) [290e822e6b81]
+  * defconfig regenerate (acuicultor) [7c361b19001a]
+  * cpufreq: add cleanslate battery optimizer feature (tbalden) [8266b873d4cd]
+  * selinux: kernel permissive updates and fixes (tbalden) [f60b260a67c5]
+  * uci: add fs hooks for uci driver (tbalden) [01818804c0ec]
+  * uci: add uci drivers, ntf, headers to p6 (tbalden) [ca01c31f98ae]
+  * selinux: kernel permissive operations added (tbalden) [4e4e4736a728]
+  * defconfig regenerate (acuicultor) [784ea1963234]
+  * init: CC_OPTIMIZE_FOR_PERFORMANCE_O3 don't depend on ARC (celtare21) [83617917813a]
+  * PM / sleep: Skip OOM killer toggles when kernel is compiled for Android (Yaroslav Furman) [0936e4145d7a]
+  * build config: remove unused wifi module (acuicultor) [f272e849253e]
+  * update build version (acuicultor) [86e2d1f0bf06]
+  * clang: update to latest google prebuilt version (acuicultor) [1fa104325cf8]
+  * gki: update abi (acuicultor) [dee20073b2f6]
+  * drivers: misc: power: implement usb fast charge mode (engstk) [fdf320731541]
+  * clang: update to latest google prebuilt version (acuicultor) [948e00622901]
+  * defconfig regenerate (acuicultor) [57ffca4ce84d]
+  * Add support for FKM OTA kernel updates Thanks to @ franciscofranco (acuicultor) [97fbd393cfe5]
+  * defconfig regenerate (acuicultor) [a34156246e48]
+  * android: abi: remove unused symbols from lists (freak07) [8d097fdd5de7]
+  * android: abi: remove unused symbol (freak07) [846a78419181]
+  * clang: bump clang to latest google prebuilt (freak07) [7804968e363d]
+  * GKI: cal-if: Fix reading from SRAM page fault (Will McVicker) [f7ac08ff44d8]
+  * BACKPORT: kbuild: Fix TRIM_UNUSED_KSYMS with LTO_CLANG (Sami Tolvanen) [26a85ba986c7]
+  * defconfig regenerate (acuicultor) [50934a4857a0]
+  * buld.config: don't build eng and userdebug dtbo (acuicultor) [f82349d25fdf]
+  * binder: Stub out debug prints by default (Sultan Alsawaf) [047886e8a195]
+  * build.config: Disable CMA migration failure debugging (celtare21) [495cb134af38]
+  * arm64: dts: Don't build userdebug or eng (celtare21) [5bb26ee8ba47]
+  * dma-buf/sync_file: Remove debug names from sync data structures (Sultan Alsawaf) [dbea899b8bd9]
+  * drivers: nfc: Lower wakelock timeout (celtare21) [ea44ee99ee72]
+  * mm: oom_kill: Reduce some verbose logging (Diab Neiroukh) [a1c0e3fc5127]
+  * sched: core: silence no longer affine to cpu logspam (Yaroslav Furman) [e462b8541ad6]
+  * cpu: Silence log spam when a CPU is brought up (Sultan Alsawaf) [305bf2c3bb7a]
+  * staging: binder - Set binder_debug_mask=0 to suppress logging (John Dias) [7bec833b1148]
+  * pwm: treat double free as a debug message (Park Ju Hyung) [8cd350c5897f]
+  * f2fs: reduce timeout for uncongestion (Park Ju Hyung) [795ba9bc442f]
+  * f2fs: set ioprio of GC kthread to idle (Park Ju Hyung) [59d6ba028fbb]
+  * dtc: quiet (tbalden) [6180af8b2efc]
+  * defconfig: adjust cmdline for faster boot (engstk) [d78163c9769a]
+  * fs: sync: Avoid calling fdget without fdput When adding fsync support, we check for fsync_enabled() in several cases but it appears that we should fdput() after fdget() but the current code just check for fsync_enabled and directly return in some cases after calling fdget(). (Wang Han) [a53263c27a62]
+  * fs: fsync on/off support (franciscofranco) [9c3001949385]
+  * proc: Don't let Google Camera run in the background (Sultan Alsawaf) [caa2fa16c6fd]
+  * treewide: use power efficient workingqueues (freak07) [9a7d61fe80a9]
+  * mm: vmstat: use power efficient workingqueues (freak07) [073ab8b85367]
+  * scripts: fix the crappy URLs in newest Google Clang versions and kernel version name and compile date/time (acuicultor) [31de79438c10]
+  * Revert "kbuild: use CONFIG_CC_VERSION_TEXT to construct LINUX_COMPILER macro" (acuicultor) [7746f5ecd22c]
+  * defconfig regenerate (acuicultor) [7f91a60f81a1]
+  * pci: bye log spam (Francisco Franco) [60bdd741a0e2]
+  * PM/Sleep: Start killing wakelocks after two minutes of idle (120s) (Tyler Nijmeh) [dc95ba65ac78]
+  * defconfig regenerate (acuicultor) [c1e61a1fcd5c]
+  * fs: default to noatime (arter97) [e5f8df03a7d2]
+  * sock: inline SELinux's sk_security to struct sock (Park Ju Hyung) [c33f0d040d0b]
+  * trace: Add a CONFIG_DISABLE_TRACE_PRINTK option. (Park Ju Hyung) [ee906ea186bb]
+  * net/sched: Shut up (celtare21) [f331e5b47902]
+  * boeffla_wl_blocker: Increase blacklist max length (Aner Torre) [29f066d00ec2]
+  * power: wl_blocker: use strcpy() in init (Denis Efremov) [616252944a59]
+  * power: wl_blocker: remove excessive len variable (Denis Efremov) [74c89600c60b]
+  * power: wl_blocker: use simple_strtoul() in debug_show() (Denis Efremov) [bd40542f8f07]
+  * power: wl_blocker: use signed type for ret in debug_store() (Denis Efremov) [96f5567b7b53]
+  * power: wl_blocker: fix permissions for version_show (Denis Efremov) [41116d6c4232]
+  * power: wl_blocker: use scnprintf PAGE_SIZE (Denis Efremov) [984e7addad1b]
+  * power: wl_blocker: add generic size (Denis Efremov) [9e78c3e0100e]
+  * boeffla_wl_blocker: don't block any wakelock by default (acuicultor) [3e66734364bc]
+  * boeffla_wl_blocker: update to wakelock blocker driver v1.1.0 (andip71) [4b39481f3b61]
+  * boeffla_wl_blocker: update to wakelock blocker driver v1.0.1 (andip71) [5b534a8b8765]
+  * boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0 (andip71) [852f30d89328]
+  * defconfig regenerate (acuicultor) [9335227c699f]
+  * gki_defconfig: enable advanced tcp, support ttl spoofing (freak07) [a0f271a5cae4]
+  * gki_defconfig: enable dynamic debug (freak07) [4de344e7f866]
+  * buildscript: gs101: adjust vendor_boot ramdisk and cmdline to reflect stock (freak07) [9e264b6be8a9]
+  * kernel: Use the stock config for /proc/config.gz (Sultan Alsawaf) [515c3112898c]
+  * buildscript: build kernel, do not use prebuilts (freak07) [2962e73ed785]
+  * update ignore (acuicultor) [d2cf2810afb9]
+  * merge linux stable kernel up to 5.10.101
+  * merge android12-5.10 branch from https://android.googlesource.com/kernel/common
+  * merge MAY 2022 12L source
 
