update build version
Signed-off-by: acuicultor <ramoncuenca4@gmail.com>

--- a/updater/changelog.txt
+++ b/updater/changelog.txt
@@ -1,134 +1,153 @@
-Project name: RadioactiveKernel_Raviole-v1.1.5 
+Project name: RadioactiveKernel_Raviole-v1.1.9
   * update build version (acuicultor)
-  * gki: abi update (acuicultor) [40cef309f325]
-  * vendor_hook: sched: let root group task use max uclamp when booting (Chungkai Mei) [16f5ff05bf02]
-  * clang: update to latest google prebuilt version (acuicultor) [640e70ebbdf5]
-  * kernel: sched: account for upstream code (freak07) [9e76d9b3ef7a]
-  * [RFC][DO NOT MERGE] sched/uclamp: Filter out uclamp_{max, min} for small tasks (Qais Yousef) [948ef513a1dd]
-  * drivers: soc: google: vh: adjust for upstream (freak07) [b3d3a4a11cab]
-  * defconfig regenerate (acuicultor) [f17ee89f0786]
-  * ANDROID: Make MGLRU aware of speculative faults (Kalesh Singh) [c2677b2db9c3]
-  * keydebug: update to 5.10.80 get_idle_time (Anay Wadhera) [7d73e1c7260e]
-  * FROMLIST: mm: multi-gen LRU: design doc (Yu Zhao) [574973b9d085]
-  * FROMLIST: mm: multi-gen LRU: admin guide (Yu Zhao) [8c6fd5dc87b3]
-  * FROMLIST: mm: multi-gen LRU: debugfs interface (Yu Zhao) [ef17b6de8994]
-  * FROMLIST: mm: multi-gen LRU: thrashing prevention (Yu Zhao) [5ec30ff71678]
-  * FROMLIST: mm: multi-gen LRU: kill switch (Yu Zhao) [a0c8ea7e225d]
-  * FROMLIST: mm: multi-gen LRU: optimize multiple memcgs (Yu Zhao) [b290bebdd073]
-  * FROMLIST: mm: multi-gen LRU: support page table walks (Yu Zhao) [bfd736be30b7]
-  * FROMLIST: mm: multi-gen LRU: exploit locality in rmap (Yu Zhao) [64f094063638]
-  * FROMLIST: mm: multi-gen LRU: minimal implementation (Yu Zhao) [b3c5c29955d6]
-  * FROMLIST: mm: multi-gen LRU: groundwork (Yu Zhao) [767a3ad9cbb4]
-  * FROMLIST: mm/vmscan.c: refactor shrink_node() (Yu Zhao) [6ceef40a0a44]
-  * FROMLIST: mm: x86: add CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG (Yu Zhao) [eb8adf61a488]
-  * FROMLIST: mm: x86, arm64: add arch_has_hw_pte_young() (Yu Zhao) [2c1350ab77ea]
-  * UPSTREAM: include/linux/page-flags-layout.h: cleanups (Yu Zhao) [e5086ddd0c23]
-  * UPSTREAM: include/linux/page-flags-layout.h: correctly determine LAST_CPUPID_WIDTH (Yu Zhao) [ce50e22f71aa]
-  * UPSTREAM: mm/swap: don't SetPageWorkingset unconditionally during swapin (Yu Zhao) [ad393bd663f1]
-  * UPSTREAM: include/linux/mm_inline.h: fold page_lru_base_type() into its sole caller (Yu Zhao) [f658f66af491]
-  * BACKPORT: mm: VM_BUG_ON lru page flags (Yu Zhao) [7ba231bea0c7]
-  * BACKPORT: mm: add __clear_page_lru_flags() to replace page_off_lru() (Yu Zhao) [e02c60eb7c9f]
-  * BACKPORT: mm/swap.c: don't pass "enum lru_list" to del_page_from_lru_list() (Yu Zhao) [e5d12d75ab12]
-  * UPSTREAM: mm/swap.c: don't pass "enum lru_list" to trace_mm_lru_insertion() (Yu Zhao) [ce7ded5f4d8e]
-  * BACKPORT: mm: don't pass "enum lru_list" to lru list addition functions (Yu Zhao) [5c03e8ca06d0]
-  * BACKPORT: include/linux/mm_inline.h: shuffle lru list addition and deletion functions (Yu Zhao) [b843244dc245]
-  * UPSTREAM: mm: fix use-after-free when anon vma name is used after vma is freed (Suren Baghdasaryan) [153cf1460deb]
-  * UPSTREAM: mm: prevent vm_area_struct::anon_name refcount saturation (Suren Baghdasaryan) [0a6dac803f76]
-  * UPSTREAM: mm: refactor vm_area_struct::anon_vma_name usage code (Suren Baghdasaryan) [90abce7bc3a2]
-  * UPSTREAM: mm: add anonymous vma name refcounting (Suren Baghdasaryan) [81681cd6f61a]
-  * UPSTREAM: mm: move anon_vma declarations to linux/mm_inline.h (Arnd Bergmann) [8db08448b7bc]
-  * UPSTREAM: mm: add a field to store names for private anonymous memory (Colin Cross) [68c4b514926d]
-  * Revert "ANDROID: mm: fix up new call to vma_merge()" (Suren Baghdasaryan) [8d9f8d08e33e]
-  * UPSTREAM: mm: rearrange madvise code to allow for reuse (Colin Cross) [94a5624a6d56]
-  * Revert "ANDROID: mm: add a field to store names for private anonymous memory" (Suren Baghdasaryan) [53d2e2155efb]
-  * Revert "ANDROID: fix up 60500a42286d ("ANDROID: mm: add a field to store names for private anonymous memory")" (Suren Baghdasaryan) [468f06564208]
-  * BACKPORT: mm/vmscan.c: use add_page_to_lru_list() (Yu Zhao) [b2bd738403dc]
-  * proc: Don't let YouTube Player run in the background (acuicultor) [017b042a7d35]
-  * clang: update to latest google prebuilt version (acuicultor) [88d643703e2a]
-  * kernel: sched: satisfy clang (acuicultor) [e012af69e75d]
-  * uci: make cfg parse on init optional (tbalden) [90d87b47231b]
-  * uci: ntf: add camera on/off status query (tbalden) [85e5c0cb2359]
-  * s2s: raise min time for doubletaps, fix for unintended double taps (tbalden) [78b6bacef11e]
-  * s2s: update for p6/p6pro bugfixes (tbalden) [5d5d29af070a]
-  * uci: torch function: use uci function handlers for modules (tbalden) [7130cec87af3]
-  * s2s: add oriole setup parts (tbalden) [b139690a82c2]
-  * arch: setup: add raven hw model detection (tbalden) [8683052cdd77]
-  * gki: update abi (freak07) [c88e14bd4eb0]
-  * uci: disable kadaway and adjust for non userland tree (freak07) [290e822e6b81]
-  * defconfig regenerate (acuicultor) [7c361b19001a]
-  * cpufreq: add cleanslate battery optimizer feature (tbalden) [8266b873d4cd]
-  * selinux: kernel permissive updates and fixes (tbalden) [f60b260a67c5]
-  * uci: add fs hooks for uci driver (tbalden) [01818804c0ec]
-  * uci: add uci drivers, ntf, headers to p6 (tbalden) [ca01c31f98ae]
-  * selinux: kernel permissive operations added (tbalden) [4e4e4736a728]
-  * defconfig regenerate (acuicultor) [784ea1963234]
-  * init: CC_OPTIMIZE_FOR_PERFORMANCE_O3 don't depend on ARC (celtare21) [83617917813a]
-  * PM / sleep: Skip OOM killer toggles when kernel is compiled for Android (Yaroslav Furman) [0936e4145d7a]
-  * build config: remove unused wifi module (acuicultor) [f272e849253e]
-  * update build version (acuicultor) [86e2d1f0bf06]
-  * clang: update to latest google prebuilt version (acuicultor) [1fa104325cf8]
-  * gki: update abi (acuicultor) [dee20073b2f6]
-  * drivers: misc: power: implement usb fast charge mode (engstk) [fdf320731541]
-  * clang: update to latest google prebuilt version (acuicultor) [948e00622901]
-  * defconfig regenerate (acuicultor) [57ffca4ce84d]
-  * Add support for FKM OTA kernel updates Thanks to @ franciscofranco (acuicultor) [97fbd393cfe5]
-  * defconfig regenerate (acuicultor) [a34156246e48]
-  * android: abi: remove unused symbols from lists (freak07) [8d097fdd5de7]
-  * android: abi: remove unused symbol (freak07) [846a78419181]
-  * clang: bump clang to latest google prebuilt (freak07) [7804968e363d]
-  * GKI: cal-if: Fix reading from SRAM page fault (Will McVicker) [f7ac08ff44d8]
-  * BACKPORT: kbuild: Fix TRIM_UNUSED_KSYMS with LTO_CLANG (Sami Tolvanen) [26a85ba986c7]
-  * defconfig regenerate (acuicultor) [50934a4857a0]
-  * buld.config: don't build eng and userdebug dtbo (acuicultor) [f82349d25fdf]
-  * binder: Stub out debug prints by default (Sultan Alsawaf) [047886e8a195]
-  * build.config: Disable CMA migration failure debugging (celtare21) [495cb134af38]
-  * arm64: dts: Don't build userdebug or eng (celtare21) [5bb26ee8ba47]
-  * dma-buf/sync_file: Remove debug names from sync data structures (Sultan Alsawaf) [dbea899b8bd9]
-  * drivers: nfc: Lower wakelock timeout (celtare21) [ea44ee99ee72]
-  * mm: oom_kill: Reduce some verbose logging (Diab Neiroukh) [a1c0e3fc5127]
-  * sched: core: silence no longer affine to cpu logspam (Yaroslav Furman) [e462b8541ad6]
-  * cpu: Silence log spam when a CPU is brought up (Sultan Alsawaf) [305bf2c3bb7a]
-  * staging: binder - Set binder_debug_mask=0 to suppress logging (John Dias) [7bec833b1148]
-  * pwm: treat double free as a debug message (Park Ju Hyung) [8cd350c5897f]
-  * f2fs: reduce timeout for uncongestion (Park Ju Hyung) [795ba9bc442f]
-  * f2fs: set ioprio of GC kthread to idle (Park Ju Hyung) [59d6ba028fbb]
-  * dtc: quiet (tbalden) [6180af8b2efc]
-  * defconfig: adjust cmdline for faster boot (engstk) [d78163c9769a]
-  * fs: sync: Avoid calling fdget without fdput When adding fsync support, we check for fsync_enabled() in several cases but it appears that we should fdput() after fdget() but the current code just check for fsync_enabled and directly return in some cases after calling fdget(). (Wang Han) [a53263c27a62]
-  * fs: fsync on/off support (franciscofranco) [9c3001949385]
-  * proc: Don't let Google Camera run in the background (Sultan Alsawaf) [caa2fa16c6fd]
-  * treewide: use power efficient workingqueues (freak07) [9a7d61fe80a9]
-  * mm: vmstat: use power efficient workingqueues (freak07) [073ab8b85367]
-  * scripts: fix the crappy URLs in newest Google Clang versions and kernel version name and compile date/time (acuicultor) [31de79438c10]
-  * Revert "kbuild: use CONFIG_CC_VERSION_TEXT to construct LINUX_COMPILER macro" (acuicultor) [7746f5ecd22c]
-  * defconfig regenerate (acuicultor) [7f91a60f81a1]
-  * pci: bye log spam (Francisco Franco) [60bdd741a0e2]
-  * PM/Sleep: Start killing wakelocks after two minutes of idle (120s) (Tyler Nijmeh) [dc95ba65ac78]
-  * defconfig regenerate (acuicultor) [c1e61a1fcd5c]
-  * fs: default to noatime (arter97) [e5f8df03a7d2]
-  * sock: inline SELinux's sk_security to struct sock (Park Ju Hyung) [c33f0d040d0b]
-  * trace: Add a CONFIG_DISABLE_TRACE_PRINTK option. (Park Ju Hyung) [ee906ea186bb]
-  * net/sched: Shut up (celtare21) [f331e5b47902]
-  * boeffla_wl_blocker: Increase blacklist max length (Aner Torre) [29f066d00ec2]
-  * power: wl_blocker: use strcpy() in init (Denis Efremov) [616252944a59]
-  * power: wl_blocker: remove excessive len variable (Denis Efremov) [74c89600c60b]
-  * power: wl_blocker: use simple_strtoul() in debug_show() (Denis Efremov) [bd40542f8f07]
-  * power: wl_blocker: use signed type for ret in debug_store() (Denis Efremov) [96f5567b7b53]
-  * power: wl_blocker: fix permissions for version_show (Denis Efremov) [41116d6c4232]
-  * power: wl_blocker: use scnprintf PAGE_SIZE (Denis Efremov) [984e7addad1b]
-  * power: wl_blocker: add generic size (Denis Efremov) [9e78c3e0100e]
-  * boeffla_wl_blocker: don't block any wakelock by default (acuicultor) [3e66734364bc]
-  * boeffla_wl_blocker: update to wakelock blocker driver v1.1.0 (andip71) [4b39481f3b61]
-  * boeffla_wl_blocker: update to wakelock blocker driver v1.0.1 (andip71) [5b534a8b8765]
-  * boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0 (andip71) [852f30d89328]
-  * defconfig regenerate (acuicultor) [9335227c699f]
-  * gki_defconfig: enable advanced tcp, support ttl spoofing (freak07) [a0f271a5cae4]
-  * gki_defconfig: enable dynamic debug (freak07) [4de344e7f866]
-  * buildscript: gs101: adjust vendor_boot ramdisk and cmdline to reflect stock (freak07) [9e264b6be8a9]
-  * kernel: Use the stock config for /proc/config.gz (Sultan Alsawaf) [515c3112898c]
-  * buildscript: build kernel, do not use prebuilts (freak07) [2962e73ed785]
-  * update ignore (acuicultor) [d2cf2810afb9]
-  * merge linux stable kernel up to 5.10.101
+  * gki: abi update (acuicultor) [d4e7e8f72382]
+  * drivers: clocksource: fix ack merge issue (acuicultor) [57ae4905fe03]
+  * clang: update to latest prebuilt version (acuicultor) [d4f69b0d3910]
+  * PM / devfreq: Make the monitor workqueue high priority (Sultan Alsawaf) [f3c2bc391414]
+  * lib/string: optimized memset (Matteo Croce) [cdd1941113a8]
+  * lib/string: optimized memmove (Matteo Croce) [d7d35229a6a8]
+  * defconfig regenerate (acuicultor) [98ffb5cdc112]
+  * mm: LRU_GEN : hardcode min_ttl to 5000ms by default (acuicultor) [4c4289415731]
+  * defconfig regenerate (acuicultor) [29afc14df7de]
+  * s2s: even longer dtap min time, avoid accidental dtaps (tbalden) [e3a333311efe]
+  * ANDROID: trusty: add a toggle for running trusty work in higher priority (Wei Wang) [a64ac814d2be]
+  * arm64/dts: gs101: Add min MIF floor for higher GPU OPP (Siddharth Kapoor) [5c418d54a2d7]
+  * update build version (acuicultor) [22eef7982eec]
+  * gki: abi update (acuicultor) [2586d85a6ac9]
+  * clang: update to latest google prebuilt version (acuicultor) [bb1aa44c0341]
+  * kernel: sched: account for upstream code (freak07) [8a8677b4f6a1]
+  * [RFC][DO NOT MERGE] sched/uclamp: Filter out uclamp_{max, min} for small tasks (Qais Yousef) [7bb7121326ca]
+  * drivers: soc: google: vh: adjust for upstream (freak07) [829d63c76ab2]
+  * defconfig regenerate (acuicultor) [11e9837dc56d]
+  * ANDROID: Make MGLRU aware of speculative faults (Kalesh Singh) [3936780d8bb6]
+  * keydebug: update to 5.10.80 get_idle_time (Anay Wadhera) [90fdd3750013]
+  * FROMLIST: mm: multi-gen LRU: design doc (Yu Zhao) [a195361d72a6]
+  * FROMLIST: mm: multi-gen LRU: admin guide (Yu Zhao) [266aa5124089]
+  * FROMLIST: mm: multi-gen LRU: debugfs interface (Yu Zhao) [9a32568d9d4b]
+  * FROMLIST: mm: multi-gen LRU: thrashing prevention (Yu Zhao) [14a2210bf7af]
+  * FROMLIST: mm: multi-gen LRU: kill switch (Yu Zhao) [f9558f3c7f49]
+  * FROMLIST: mm: multi-gen LRU: optimize multiple memcgs (Yu Zhao) [fef7d416d54f]
+  * FROMLIST: mm: multi-gen LRU: support page table walks (Yu Zhao) [45b64d4c7aec]
+  * FROMLIST: mm: multi-gen LRU: exploit locality in rmap (Yu Zhao) [e8a7f5bb6b86]
+  * FROMLIST: mm: multi-gen LRU: minimal implementation (Yu Zhao) [e4a664231da8]
+  * FROMLIST: mm: multi-gen LRU: groundwork (Yu Zhao) [3f63acd771bc]
+  * FROMLIST: mm/vmscan.c: refactor shrink_node() (Yu Zhao) [9abe60deae6e]
+  * FROMLIST: mm: x86: add CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG (Yu Zhao) [76c4243eae8e]
+  * FROMLIST: mm: x86, arm64: add arch_has_hw_pte_young() (Yu Zhao) [9c7bc7c78935]
+  * UPSTREAM: include/linux/page-flags-layout.h: cleanups (Yu Zhao) [cc22ef2709af]
+  * UPSTREAM: include/linux/page-flags-layout.h: correctly determine LAST_CPUPID_WIDTH (Yu Zhao) [70061c2360f3]
+  * UPSTREAM: mm/swap: don't SetPageWorkingset unconditionally during swapin (Yu Zhao) [fd11f3f03b3f]
+  * UPSTREAM: include/linux/mm_inline.h: fold page_lru_base_type() into its sole caller (Yu Zhao) [1797b126bf83]
+  * BACKPORT: mm: VM_BUG_ON lru page flags (Yu Zhao) [ad3adc132652]
+  * BACKPORT: mm: add __clear_page_lru_flags() to replace page_off_lru() (Yu Zhao) [09859450856f]
+  * BACKPORT: mm/swap.c: don't pass "enum lru_list" to del_page_from_lru_list() (Yu Zhao) [ec8cca93a0bf]
+  * UPSTREAM: mm/swap.c: don't pass "enum lru_list" to trace_mm_lru_insertion() (Yu Zhao) [699fdb9884b3]
+  * BACKPORT: mm: don't pass "enum lru_list" to lru list addition functions (Yu Zhao) [9d248238bbd1]
+  * BACKPORT: include/linux/mm_inline.h: shuffle lru list addition and deletion functions (Yu Zhao) [22fe83b6deea]
+  * UPSTREAM: mm: fix use-after-free when anon vma name is used after vma is freed (Suren Baghdasaryan) [a8835543364f]
+  * UPSTREAM: mm: prevent vm_area_struct::anon_name refcount saturation (Suren Baghdasaryan) [be4c2116811b]
+  * UPSTREAM: mm: refactor vm_area_struct::anon_vma_name usage code (Suren Baghdasaryan) [e107a402136d]
+  * UPSTREAM: mm: add anonymous vma name refcounting (Suren Baghdasaryan) [90cb7bb66872]
+  * UPSTREAM: mm: move anon_vma declarations to linux/mm_inline.h (Arnd Bergmann) [782a5cbe2cdb]
+  * UPSTREAM: mm: add a field to store names for private anonymous memory (Colin Cross) [615545ac2e03]
+  * Revert "ANDROID: mm: fix up new call to vma_merge()" (Suren Baghdasaryan) [2e76ff225e72]
+  * UPSTREAM: mm: rearrange madvise code to allow for reuse (Colin Cross) [06be3eb40237]
+  * Revert "ANDROID: mm: add a field to store names for private anonymous memory" (Suren Baghdasaryan) [c0f66aa7623c]
+  * Revert "ANDROID: fix up 60500a42286d ("ANDROID: mm: add a field to store names for private anonymous memory")" (Suren Baghdasaryan) [9d848558ff0a]
+  * BACKPORT: mm/vmscan.c: use add_page_to_lru_list() (Yu Zhao) [e1aa0122dd54]
+  * clang: update to latest google prebuilt version (acuicultor) [cee6a28f706b]
+  * kernel: sched: satisfy clang (acuicultor) [0a2bbf85d86b]
+  * uci: make cfg parse on init optional (tbalden) [cbcb1c815176]
+  * uci: ntf: add camera on/off status query (tbalden) [3befe32cdb91]
+  * s2s: raise min time for doubletaps, fix for unintended double taps (tbalden) [de1c688e1f41]
+  * s2s: update for p6/p6pro bugfixes (tbalden) [305537280bc5]
+  * uci: torch function: use uci function handlers for modules (tbalden) [f5179514cc59]
+  * s2s: add oriole setup parts (tbalden) [026cefc038c9]
+  * arch: setup: add raven hw model detection (tbalden) [d75712dbd324]
+  * gki: update abi (freak07) [50232ec65f3b]
+  * uci: disable kadaway and adjust for non userland tree (freak07) [fc522a81957c]
+  * defconfig regenerate (acuicultor) [abfee47e7c53]
+  * cpufreq: add cleanslate battery optimizer feature (tbalden) [3e2c15b83c5c]
+  * selinux: kernel permissive updates and fixes (tbalden) [d6f6365f83a1]
+  * uci: add fs hooks for uci driver (tbalden) [2f060b78c0ad]
+  * uci: add uci drivers, ntf, headers to p6 (tbalden) [c4b15849660a]
+  * selinux: kernel permissive operations added (tbalden) [78a405777704]
+  * defconfig regenerate (acuicultor) [08485e56ad29]
+  * init: CC_OPTIMIZE_FOR_PERFORMANCE_O3 don't depend on ARC (celtare21) [3dd11423c5f4]
+  * PM / sleep: Skip OOM killer toggles when kernel is compiled for Android (Yaroslav Furman) [b8bc755e282d]
+  * build config: remove unused wifi module (acuicultor) [101c4e0ea310]
+  * update build version (acuicultor) [0f5ae1107413]
+  * clang: update to latest google prebuilt version (acuicultor) [ba8ae02fc09c]
+  * gki: update abi (acuicultor) [1d81c7c3d0be]
+  * drivers: misc: power: implement usb fast charge mode (engstk) [21deb632e4c0]
+  * clang: update to latest google prebuilt version (acuicultor) [b683538d6fc3]
+  * defconfig regenerate (acuicultor) [de9642f9fa08]
+  * Add support for FKM OTA kernel updates Thanks to @ franciscofranco (acuicultor) [0fa803079bb8]
+  * defconfig regenerate (acuicultor) [4ebf256d478e]
+  * android: abi: remove unused symbols from lists (freak07) [56d6e19e5e41]
+  * android: abi: remove unused symbol (freak07) [e5af0b6f236f]
+  * clang: bump clang to latest google prebuilt (freak07) [201efe2ba8e8]
+  * GKI: cal-if: Fix reading from SRAM page fault (Will McVicker) [512d57304dc7]
+  * BACKPORT: kbuild: Fix TRIM_UNUSED_KSYMS with LTO_CLANG (Sami Tolvanen) [e109c5f958cd]
+  * defconfig regenerate (acuicultor) [c16b2dd48628]
+  * buld.config: don't build eng and userdebug dtbo (acuicultor) [2a1f9391b6a8]
+  * binder: Stub out debug prints by default (Sultan Alsawaf) [b9f12f606069]
+  * build.config: Disable CMA migration failure debugging (celtare21) [eec0b4e030bb]
+  * arm64: dts: Don't build userdebug or eng (celtare21) [cdeb4baff379]
+  * dma-buf/sync_file: Remove debug names from sync data structures (Sultan Alsawaf) [d4996f625294]
+  * drivers: nfc: Lower wakelock timeout (celtare21) [a34c9e55cd80]
+  * mm: oom_kill: Reduce some verbose logging (Diab Neiroukh) [9f8742c8d997]
+  * sched: core: silence no longer affine to cpu logspam (Yaroslav Furman) [8f8c2677c684]
+  * cpu: Silence log spam when a CPU is brought up (Sultan Alsawaf) [9661dbc83403]
+  * staging: binder - Set binder_debug_mask=0 to suppress logging (John Dias) [01a88639b3f9]
+  * pwm: treat double free as a debug message (Park Ju Hyung) [2349db16d457]
+  * f2fs: reduce timeout for uncongestion (Park Ju Hyung) [20111f2d0625]
+  * f2fs: set ioprio of GC kthread to idle (Park Ju Hyung) [71aa3d2b6eef]
+  * dtc: quiet (tbalden) [3830b1da8884]
+  * defconfig: adjust cmdline for faster boot (engstk) [b3be33488cb3]
+  * fs: sync: Avoid calling fdget without fdput When adding fsync support, we check for fsync_enabled() in several cases but it appears that we should fdput() after fdget() but the current code just check for fsync_enabled and directly return in some cases after calling fdget(). (Wang Han) [b413173a5242]
+  * fs: fsync on/off support (franciscofranco) [a95dffa64cfe]
+  * treewide: use power efficient workingqueues (freak07) [c7773e4ae94b]
+  * mm: vmstat: use power efficient workingqueues (freak07) [f9b50cd70eef]
+  * scripts: fix the crappy URLs in newest Google Clang versions and kernel version name and compile date/time (acuicultor) [412e94ae0471]
+  * Revert "kbuild: use CONFIG_CC_VERSION_TEXT to construct LINUX_COMPILER macro" (acuicultor) [128dee032ba4]
+  * defconfig regenerate (acuicultor) [3cbf6688207c]
+  * pci: bye log spam (Francisco Franco) [0d51955a682d]
+  * PM/Sleep: Start killing wakelocks after two minutes of idle (120s) (Tyler Nijmeh) [094d4ae2b334]
+  * defconfig regenerate (acuicultor) [5be95d825744]
+  * fs: default to noatime (arter97) [e43cd1733edd]
+  * sock: inline SELinux's sk_security to struct sock (Park Ju Hyung) [a3398dadeeaa]
+  * trace: Add a CONFIG_DISABLE_TRACE_PRINTK option. (Park Ju Hyung) [e367e55ce3a7]
+  * net/sched: Shut up (celtare21) [3260b20152b0]
+  * boeffla_wl_blocker: don't block any wakelock by default (acuicultor) [63381002455c]
+  * boeffla_wl_blocker: update to wakelock blocker driver v1.1.0 (andip71) [8001436edaa6]
+  * boeffla_wl_blocker: update to wakelock blocker driver v1.0.1 (andip71) [1515ed5f5301]
+  * boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0 (andip71) [c2a7574c2b91]
+  * defconfig regenerate (acuicultor) [1958f2e68792]
+  * gki_defconfig: enable advanced tcp, support ttl spoofing (freak07) [b3f99a29aebe]
+  * gki_defconfig: enable dynamic debug (freak07) [6413edcef6c8]
+  * buildscript: gs101: adjust vendor_boot ramdisk and cmdline to reflect stock (freak07) [76adb12cf504]
+  * kernel: Use the stock config for /proc/config.gz (Sultan Alsawaf) [3f87bf1542ce]
+  * buildscript: build kernel, do not use prebuilts (freak07) [f2731576e9ab]
+  * update ignore (acuicultor) [b6f6ef67fa50]
+  * Revert "UPSTREAM: usb: dwc3: gadget: Wait for ep0 xfers to complete during dequeue" (acuicultor) [073b5d3b2535]
+  * Revert "UPSTREAM: usb: dwc3: Issue core soft reset before enabling run/stop" (acuicultor) [f82a4f21672a]
+  * Revert "UPSTREAM: usb: dwc3: gadget: Replace list_for_each_entry_safe() if using giveback" (acuicultor) [d2bad7c6239b]
+  * Revert "UPSTREAM: usb: gadget: composite: Show warning if function driver's descriptors are incomplete." (acuicultor) [a5f346c219c4]
+  * Revert "UPSTREAM: usb: gadget: uvc: make uvc_num_requests depend on gadget speed" (acuicultor) [0eaad63c628f]
+  * Revert "UPSTREAM: usb: dwc3: gadget: Give some time to schedule isoc" (acuicultor) [e2893d72fb07]
+  * Revert "UPSTREAM: usb: gadget: uvc: only schedule stream in streaming state" (acuicultor) [56a59caeea3e]
+  * Revert "UPSTREAM: usb: gadget: uvc: only pump video data if necessary" (acuicultor) [dc482e3fa0b3]
+  * Revert "UPSTREAM: usb: gadget: uvc: test if ep->desc is valid on ep_queue" (acuicultor) [d8c7af6f5b3a]
+  * Revert "UPSTREAM: usb: gadget: uvc: Fix crash when encoding data for usb request" (acuicultor) [397c2b71cffc]
+  * Revert "FROMGIT: usb: gadget: uvc: allow changing interface name via configfs" (acuicultor) [cb448b9b0663]
+  * Revert "FROMGIT: usb: gadget: uvc: remove pause flag use" (acuicultor) [333177548e2a]
+  * Revert "UPSTREAM: usb: gadget: configfs: clear deactivation flag in configfs_composite_unbind()" (acuicultor) [82b178aa1893]
+  * Revert "FROMGIT: usb: dwc3: gadget: increase tx fifo size for ss isoc endpoints" (acuicultor) [531eda0126ed]
+  * Revert "FROMGIT: usb: gadget: uvc: allow for application to cleanly shutdown" (acuicultor) [d2d2b2ae99ca]
+  * Revert "BACKPORT: can: usb_8dev: usb_8dev_start_xmit(): fix double dev_kfree_skb() in error path" (acuicultor) [38dea8ea863b]
+  * Revert "BACKPORT: can: ems_usb: ems_usb_start_xmit(): fix double dev_kfree_skb() in error path" (acuicultor) [37df7d487b75]
+  * merge linux stable kernel up to 5.10.110
   * merge android12-5.10 branch from https://android.googlesource.com/kernel/common
-  * merge MAY 2022 12L source
+  * merge JUNE 2022 12L source
 
